doc-index-updater/base/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: doc-index-updater
spec:
  hosts:
    - doc-index-updater.localhost
  gateways:
    - istio-system/ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: doc-index-updater
